<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/img_Overview"
        app:layout_constraintTop_toTopOf="@+id/img_Overview" />

    <ImageView
        android:background="@drawable/background_frame"
        android:id="@+id/img_Overview"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/chck_ListBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rating"
        app:layout_constraintBottom_toTopOf="@+id/chck_ListBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_myrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/userrating"
        app:layout_constraintBottom_toBottomOf="@+id/chck_ListBox"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/chck_ListBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="@string/watched"
        app:layout_constraintBottom_toBottomOf="@+id/img_Overview"
        app:layout_constraintStart_toEndOf="@+id/img_Overview"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
</android.support.constraint.ConstraintLayout>